# chat_team

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: wechat_bot_api.md  wechat_bot_接收消息.md
docs/examples/roles/: README.md  customer_service.yaml  research_engineer.yaml
scripts/: replay_llm_http.sh  smoke_boss.py  smoke_boss_tui.py  smoke_compaction_persistence.py  smoke_critical_fixes.py  smoke_deploy_config.py  smoke_describe_image.py  smoke_dispatch.py  smoke_image_cache.py  smoke_image_resize.py  smoke_key_rotation.py  smoke_llm_debug_log.py  smoke_mcp.py  smoke_media_events.py  smoke_p0_fixes.py  smoke_p0_round2.py  smoke_private_chat_policy.py  smoke_reload.py  smoke_send_media.py  smoke_skill_trigger.py  smoke_skills.py  smoke_slash_commands.py  smoke_solo.py  smoke_split_llm.py  smoke_team_profile.py  smoke_tools.py  smoke_transfer.py  smoke_vision_provider.py  smoke_vision_shim.py  smoke_wecom_parse.py
src/chat_team/: app.py  boss.py  boss_tui.py  config.py  daemon.py  dispatcher.py  list_tools.py  paths.py  reload.py  vision_shim.py
src/chat_team/adapters/: base.py  wecom.py  wecom_media.py
src/chat_team/agent/: agent.py  compactor.py
src/chat_team/llm/: base.py  debug_logger.py  http_debug_logger.py  image_cache.py  image_description_cache.py  key_rotation.py  openai_provider.py
src/chat_team/mcp/: client.py  config.py  proxy_tool.py
src/chat_team/roles/: config.py  registry.py
src/chat_team/session/: manager.py  notebook.py  persistence.py  session.py
src/chat_team/skills/: config.py  registry.py
(+15 files in other folders)
